--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "bitcore-lib": "https://github.com/dyavolick/bitcore-lib.git",
-    "bitcore-node": "5.0.0-beta.44",
+    "bitcore-node": "https://github.com/dyavolick/bitcore-node.git",
     "insight-api": "5.0.0-beta.44",
     "insight-ui": "bitpay/insight#v5.0.0-beta.44"
   },
